--- a/Types.ipynb
+++ b/Types.ipynb
@@ -3434,7 +3434,7 @@
    },
    "source": [
     "<b>Tableau comme tableau d'indices</b>   \n",
-    "$\\rightarrow$ presque magique !"
+    "$\\rightarrow$ Subtil et pythonnesque"
    ]
   },
   {
@@ -3500,7 +3500,9 @@
     }
    },
    "source": [
-    "<b>Fonctionne avec des booléens</b>"
+    "<b>Fonctionne avec des booléens</b>   \n",
+    "* Terme à terme   \n",
+    "* Avec toute expression booléenne"
    ]
   },
   {
@@ -3522,8 +3524,8 @@
    ],
    "source": [
     "A=np.array([1,2,3,4,9,2,0,7,9])\n",
-    "B=A>3#terme à terme... encore !\n",
-    "C=A%2==1#Tous les booléens !\n",
+    "B=A>3\n",
+    "C=A%2==1\n",
     "B,C"
    ]
   },
@@ -3569,11 +3571,73 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "!!!"
+    "<b>Slicing des arrays</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2],\n",
+       "       [-1,  0]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A=np.array([[1,2,1],[-1,0,1],[1,1,1]])\n",
+    "#A[0,1]\n",
+    "A,A[0,:]#Premiere ligne\n",
+    "#A[0:2,0:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<b>Matrices particulières</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0],\n",
+       "       [0, 2, 0, 0],\n",
+       "       [0, 0, 3, 0],\n",
+       "       [0, 0, 0, 4]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B=np.zeros((3,4))\n",
+    "C=np.ones((4,3))\n",
+    "I=np.eye(5)\n",
+    "D=np.diag((1,2,3,4))#Fonctionne avec une liste\n",
+    "D"
    ]
   },
   {
@@ -3603,7 +3667,6 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -3700,8 +3763,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Autre solution ($\\verb\"arrays\"$) : $\\verb\"dot\"$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  2],\n",
+       "       [-1,  0,  1]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A=np.array([[1,1],[0,1]])\n",
+    "B=np.array([[1,2,1],[-1,0,1]]) ; C=np.dot(A,B)\n",
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -3713,10 +3810,12 @@
       "text/plain": [
        "(2, array([[ 1, -1,  1],\n",
        "        [ 2,  0,  1],\n",
+       "        [ 1,  1,  1]]), array([[ 1, -1,  1],\n",
+       "        [ 2,  0,  1],\n",
        "        [ 1,  1,  1]]))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3725,7 +3824,7 @@
     "#transpose(a)\n",
     "a.transpose()\n",
     "#np.det(a)\n",
-    "np.trace(a),a.transpose()"
+    "np.trace(a),a.transpose(),a.T"
    ]
   },
   {
@@ -3737,7 +3836,7 @@
    },
    "source": [
     "\n",
-    "Mince !\n"
+    "Il manque les outils usuels d'algèbre linéaire\n"
    ]
   },
   {
@@ -3756,7 +3855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3764,30 +3863,178 @@
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'module' object has no attribute 'trace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-2bde24754805>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'trace'"
-     ]
+     "data": {
+      "text/plain": [
+       "(2.0, 2)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lg.det(a),np.trace(a),lg.trace(a)"
+    "lg.det(a),np.trace(a)\n",
+    "#Pas lg.trace(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.5],\n",
+       "       [-4. ],\n",
+       "       [ 5.5]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A=np.array([[1,1,1],[0,1,1],[1,1,1]])#ou matrix\n",
+    "lg.matrix_power(A,5)\n",
+    "lg.matrix_rank(A)\n",
+    "lg.inv(a)\n",
+    "b=np.matrix([[1],[2],[5]]) ; lg.solve(a,b)\n",
+    "AA,B=np.array(a),np.array(b) ; lg.solve(AA,B)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "$\\rightarrow$  Voir numpy et linalg (cf. Centrale)"
+    "<b>Systèmes linéaires</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 3.5],\n",
+       "        [-4. ],\n",
+       "        [ 5.5]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b=np.matrix([[1],[2],[5]]) ; c=lg.solve(a,b)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 1.],\n",
+       "        [ 2.],\n",
+       "        [ 5.]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a*c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.5],\n",
+       "       [-4. ],\n",
+       "       [ 5.5]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AA,B=np.array(a),np.array(b) ; lg.solve(AA,B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.5, -4. ,  5.5])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BB=np.array([1,2,5]) ; lg.solve(AA,BB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\rightarrow$ Dangereux (tailles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "$\\rightarrow$  Voir numpy et linalg (cf. Centrale)   \n",
+    "* $\\verb\"lg.eigvals\"$   \n",
+    " \n",
+    "* $\\verb\"lg.eig\"$   \n",
+    " \n",
+    "* $\\verb\"np.vdot\"$   \n",
+    " \n",
+    "* $\\verb\"np.cross\"$   "
    ]
   }
  ],
