--- a/Piles.ipynb
+++ b/Piles.ipynb
@@ -214,25 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#creer_pile\n",
-    "def creer_pile():\n",
-    "    return []\n",
+    "\n",
     "#empiler\n",
-    "def empiler(a,p):\n",
-    "    p.append(a)\n",
+    "\n",
     "#depiler\n",
-    "def depiler(p):\n",
-    "    assert (not est_vide(p))\n",
-    "    return p.pop()\n",
-    "#est_vide\n",
-    "def est_vide(p):\n",
-    "    return p==[]"
+    "\n",
+    "#est_vide\n"
    ]
   },
   {
@@ -247,17 +241,17 @@
    "outputs": [],
    "source": [
     "#Les 4 opérations fondamentales (primitives)\n",
-    "def creerpile():\n",
+    "def creer_pile():\n",
     "    return []\n",
     "\n",
-    "def estvide(P):\n",
-    "    return len(P)==0\n",
+    "def est_vide(P):\n",
+    "    return P==[]\n",
     "   \n",
     "def empiler(x,P):\n",
     "    P.append(x)\n",
     "    \n",
     "def depiler(P):\n",
-    "    assert len(P)>0\n",
+    "    assert not est_vide(P)\n",
     "    return P.pop()"
    ]
   },
@@ -286,8 +280,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Mise en oeuvre"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def deux(p):\n",
+    "    '''renvoie le deuxième élément sans affecter la pile initiale'''\n",
+    "    q=creer_pile()\n",
+    "    empiler(depiler(p),q)\n",
+    "    a=depiler(p)\n",
+    "    empiler(a,p)\n",
+    "    empiler(depiler(q),p)\n",
+    "    return a\n",
+    "def renverse(p):\n",
+    "    q1=creer_pile()\n",
+    "    q2=creer_pile()\n",
+    "    while not(est_vide(p)):\n",
+    "        a=depiler(p)\n",
+    "        empiler(a,q1)\n",
+    "        empiler(a,q2)\n",
+    "    while not(est_vide(q2)):\n",
+    "        empiler(depiler(q2),p)\n",
+    "    return q1\n",
+    "def copie(p):\n",
+    "    return renverse(renverse(p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Remarques \n",
+    "* Remise en place de la pile    \n",
+    "* Dans le corps de la fonction\n",
+    "$\\rightarrow$ Nécessité d'un type mutable\n",
+    "\n",
+    "* pas de copie/affichage/... prévus dans la classe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -300,7 +351,7 @@
        "(3, [1])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,10 +375,10 @@
    "source": [
     "### Piles à capacité finie\n",
     "\n",
-    "* Capacité $n$ ($n=1000$ en Python)\n",
+    "* Capacité $\\verb\"max\"$ (=1000 en Python)\n",
     "* Listes :\n",
-    "    * Element d'indice $0$ : taille\n",
-    "    * Suivants : éléments de la pile empilés à droite"
+    "    * Sommet (ou élement d'indice $0$) : taille\n",
+    "    * Autres : éléments de la pile"
    ]
   },
   {
@@ -363,10 +414,39 @@
    },
    "outputs": [],
    "source": [
-    "#creer_pile\n",
+    "#creepile\n",
+    "def creepile():\n",
+    "    p=creer_pile()\n",
+    "    empiler(0,p)\n",
+    "    return p\n",
     "#empiler\n",
+    "def empile(x,p):\n",
+    "    n=depiler(p)\n",
+    "    assert not(n<maxi)\n",
+    "    empiler(x,p)\n",
+    "    empiler(n+1,p)\n",
+    "#est vide\n",
+    "def estvide(p):\n",
+    "    a=depiler(p)\n",
+    "    empiler(a,p)\n",
+    "    return a==0\n",
     "#depiler\n",
-    "#est_vide"
+    "def depile(p):\n",
+    "    n=depiler(p)\n",
+    "    assert not(est_vide(p))\n",
+    "    a=depiler(p)\n",
+    "    empiler(n-1,p)\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Autre version :\n",
+    "* Tableaux de taille fixée à max\n",
+    "* Taille courante à l'indice 0    \n",
+    "$\\rightarrow$ Au lieu du sommet"
    ]
   },
   {
@@ -380,7 +460,7 @@
    },
    "outputs": [],
    "source": [
-    "def creerpile(n):\n",
+    "def creer_pile(n):\n",
     "#On crée une pile pouvant contenir au plus n éléments\n",
     "    p=[None]*(n+1)\n",
     "    p[0]=0\n",
@@ -403,7 +483,7 @@
     "    P[0]=taille-1\n",
     "    return sommet\n",
     "    \n",
-    "def estvide(P):\n",
+    "def est_vide(P):\n",
     "    return P[0]==0"
    ]
   },
@@ -435,10 +515,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Pile:\n",
     "    def __init__(self):\n",
@@ -454,42 +543,62 @@
     "        if self.estvide():\n",
     "            raise ValueError (\"La pile est vide\")\n",
     "        else:\n",
-    "            return self._pile.pop()"
+    "            return self._pile.pop()\n",
+    "#p=Pile()\n",
+    "#p._pile\n",
+    "#p.empiler(1)\n",
+    "#p._pile\n",
+    "#p.depiler()\n",
+    "#p._pile\n",
+    "#print(p)#ne donne pas d'affichage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Autre exemple de classe en POO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[20]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#P1=Pile()\n",
-    "#P1.estvide()\n",
-    "#P1.empiler(1)\n",
-    "#P1.empiler(2)\n",
-    "#P1.depiler()\n",
-    "#print(P1)#ne donne pas d'affichage\n",
-    "#P1._pile#il faut employer l'attribut pile\n",
-    "#P1.estvide()\n",
-    "#P1.depiler()\n",
-    "#P1.depiler()\n",
-    "#P1._pile\n",
-    "P1.estvide()"
+    "class Eleve:\n",
+    "    def __init__(self):\n",
+    "        self._nom=''\n",
+    "        self._prenom=''\n",
+    "        self._devoirs=[]\n",
+    "        self._interros=[]\n",
+    "    def ajout_devoir(self,n):\n",
+    "        self._devoirs.append(n)\n",
+    "    def renomme(self,chaine):\n",
+    "        self._nom=chaine\n",
+    "e1=Eleve()\n",
+    "e1.renomme('Queffelec')\n",
+    "e1.ajout_devoir(20)\n",
+    "e1._devoirs    "
    ]
   },
   {
@@ -641,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +762,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,8 +835,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Implémentation \n",
+    "* Expression en NPI :\n",
+    "    * Liste d'éléments (nombres/opérateur)\n",
+    "    * Chacun comme une chaîne de caractères\n",
+    "    * Non ambiguité sur '34' $\\neq$'3','4'\n",
+    "    \n",
+    "<b>Exemple :</b> [3,4,'+',5,'\\*',6,'+',2,1,'+',3,'\\*',8,'+',7,'\\*','+']"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -737,27 +863,28 @@
    "outputs": [],
    "source": [
     "def evaluationNPI(expr):\n",
-    "    p=creerpile()\n",
+    "    '''prend en paramètre une liste de chaines \n",
+    "    de caractères correspondant à une expression \n",
+    "    correcte en NPI\n",
+    "    et renvoie le résultat du calcul'''\n",
+    "    p=creer_pile()\n",
     "    for element in expr:\n",
-    "        if (not type(element)==str):\n",
-    "            empiler(element,p)\n",
+    "        if (element=='+'):\n",
+    "            y=depiler(p);x=depiler(p);empiler(x+y,p)\n",
+    "        elif (element=='-'):\n",
+    "            y=depiler(p);x=depiler(p);empiler(x-y,p)\n",
+    "        elif (element=='*'):\n",
+    "            y=depiler(p);x=depiler(p);empiler(x*y,p)\n",
+    "        elif (element=='/'):\n",
+    "            y=depiler(p);x=depiler(p);empiler(x/y,p)\n",
     "        else:\n",
-    "            y=depiler(p)\n",
-    "            x=depiler(p)\n",
-    "            if (element=='+'):\n",
-    "                empiler(x+y,p)\n",
-    "            elif (element=='-'):\n",
-    "                empiler(x-y,p)\n",
-    "            elif (element=='*'):\n",
-    "                empiler(x*y,p)\n",
-    "            elif (element=='/'):\n",
-    "                empiler(x/y,p)\n",
+    "            empiler(int(element),p)\n",
     "    return depiler(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -766,13 +893,13 @@
        "160"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exprtest=[3,4,'+',5,'*',6,'+',2,1,'+',3,'*',8,'+',7,'*','+']\n",
+    "exprtest=['3','4','+','5','*','6','+','2','1','+','3','*','8','+','7','*','+']\n",
     "evaluationNPI(exprtest)"
    ]
   },
@@ -820,9 +947,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -837,10 +963,7 @@
     "            compt+=1\n",
     "        elif carac==')':\n",
     "            compt+=-1\n",
-    "    if compt==0:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    return compt==0"
    ]
   },
   {
@@ -909,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -928,10 +1051,7 @@
     "            compt+=-1\n",
     "        if compt<0:\n",
     "            return False\n",
-    "    if compt==0:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    return compt==0"
    ]
   },
   {
@@ -962,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -973,17 +1093,17 @@
    "source": [
     "def parenthese(mot):\n",
     "    n=len(mot)\n",
-    "    p=creerpile()\n",
+    "    p=creer_pile()\n",
     "    L=[]\n",
     "    for i in range(n):\n",
     "        if mot[i]=='(':\n",
     "            empiler(i,p)\n",
     "        else:\n",
-    "            if estvide(p):\n",
+    "            if est_vide(p):\n",
     "                return (False,[])\n",
     "            else:\n",
     "                L.append((depiler(p),i))\n",
-    "    if estvide(p):\n",
+    "    if est_vide(p):\n",
     "        return (True,L)\n",
     "    else:\n",
     "        return (False,[])"
@@ -991,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1122,7 @@
        " (False, []))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,15 +1132,6 @@
     "mot2=\"(()(())()))()(())\"\n",
     "parenthese(mot1),parenthese(mot2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
